--- a/JavaScript/核心原理解析/基础/index.html
+++ b/JavaScript/核心原理解析/基础/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- <script src="./深浅拷贝.js"></script> -->
-    <script src="./04-继承进阶.js"></script>
+    <!-- <script src="./04-继承进阶.js"></script> -->
+    <!-- <script src="./04-apply,call,bind.js"></script> -->
+    <script src="./05-js闭包.js"></script>
 </head>
 <body>
     
