--- a/JavaScript/核心原理解析/深入数组/index.html
+++ b/JavaScript/核心原理解析/深入数组/index.html
@@ -8,10 +8,18 @@
     <!-- <script src="./数组方法.js"></script> -->
     <!-- <script src="./改变数组.js"></script> -->
     <!-- <script src="./不改变数组.js"></script> -->
-    <script src="./遍历方法.js"></script>
+    <!-- <script src="./遍历方法.js"></script> -->
+    <script src="./08-类数组.js"></script>
 </head>
 <body>
-    
+    <!-- <form action="">
+        
+    </form>
+    <form action=""></form> -->
+    <!-- <input type="checkbox">
+    <input type="checkbox"> -->
+
+
 </body>
 </html>
 
