--- a/数据结构和算法/codewhy/04_链表结构/01_单项链表.html
+++ b/数据结构和算法/codewhy/04_链表结构/01_单项链表.html
@@ -1,28 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <script>
-        function LinkedList(){
-            // 内部类
-            function Node(data){
-                this.data = data
-                this.next = null
-            }
-            //属性
-            this.head = null
-            this.length = 0
-
-            
+      function LinkedList() {
+        // 内部类
+        function Node(data) {
+          this.data = data;
+          this.next = null;
         }
+        //属性
+        this.head = null;
+        this.length = 0;
 
+        // 1.追加方法
+        LinkedList.prototype.append = function (data) {
+          // 创建新的节点
+          var newNode = new Node(data);
 
+          // 判断是否添加的是第一个节点
+          if (this.length == 0) {
+            this.head = newNode;
+          } else {
+            var current = this.head;
+            while (current.next) {
+              current = current.next;
+            }
+            // 最后节点的 next 指向新的节点
+            current.next = newNode;
+          }
+
+          this.length += 1;
+        };
+
+        // 2.toString  方法
+        LinkedList.prototype.toString = function () {
+          var current = this.head;
+          var listString = "";
+
+          while (current) {
+            listString += current.data + " ";
+            current = current.next;
+          }
+          return listString;
+        };
+      }
     </script>
-    
-</body>
+  </body>
 </html>
