--- a/DailyStudy/Aug/8.11/index.html
+++ b/DailyStudy/Aug/8.11/index.html
@@ -1,29 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- <script src="./defineProperty.js"></script> -->
     <script src="./observe/index.js"></script>
     <script>
-    let car = {
-        name:"chu",
-        age:18
-    } 
-    
-    
-
-    //     let car =  {
-    //     'brand':'BMW',
-    //     'price':3000
-    // }
-
-    observe(car)
-    console.log(car)
+      let car = {
+        name: "chu",
+        inner: {
+          obj: "inner",
+        },
+        after: 19,
+      };
+      observe(car);
+      car.after = { after: "test" };
+      console.log(car);
     </script>
-</body>
+  </body>
 </html>
